<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tr_gen_layoutTrackname"
        style="@style/track_detail_itemStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tr_gen_detail_art"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:scaleType="fitStart"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/tr_gen_Approved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/check_box_3state_selector"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tr_gen_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:text="Track"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/tr_gen_detail_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tr_layoutUploadHorizontal_gen"
        style="@style/track_detail_itemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hImgGalleryGen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thumbnail_size_dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent">
        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
