<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_track_edit"
        android:icon="@drawable/ic_edit_track"
        android:orderInCategory="50"
        android:title="@string/edit_track"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/menu_event_add"
...
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="50"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/star2x"
        android:orderInCategory="50"
        android:title="@string/favorit"
        app:showAsAction="always|collapseActionView"/>

</menu>
...
