...
        android:gravity="center"
        android:text="@string/empty"
        android:textSize="16sp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_overview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>

